--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>email list</title>
 </head>
 <body>
+<div id="random-email"></div>
+
     <script src="./js/scipt.js"></script>
 </body>
 </html>
