[UPD] modified js code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 <div id="random-email"></div>
-
+<!-- qui inserisco gli elementi creati da js -->
     <script src="./js/scipt.js"></script>
+    <div></div>
 </body>
 </html>
