--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css">
     <title>email list</title>
 </head>
+
 <body>
-<div id="random-email"></div>
-<!-- qui inserisco gli elementi creati da js -->
+    <div class="container">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2>LISTA EMAIL</h2>
+                <div id="random-email"></div>
+                <!-- qui inserisco gli elementi creati da js -->
+            </div>
+            <div class="col-12 text-center">
+                <button id="btn">Genera Email</button>
+            </div>
+        </div>
+    </div>
     <script src="./js/scipt.js"></script>
-    <div></div>
 </body>
+
 </html>
