[DONE] add style

--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <title>email list</title>
 </head>
 
-<body>
-    <div class="container">
+<body class="bg-black">
+    <div class="container justify-content-center">
         <div class="row">
             <div class="col-12 text-center">
-                <h2>LISTA EMAIL</h2>
+                <h2 class="text-white">LISTA EMAIL</h2>
                 <div id="random-email"></div>
                 <!-- qui inserisco gli elementi creati da js -->
             </div>
             <div class="col-12 text-center">
-                <button id="btn">Genera Email</button>
+                <button id="btn" class="btn btn-dark">Genera Email</button>
             </div>
         </div>
     </div>
